# proxy-env-cleaner

./: .gitignore  CHANGELOG.md  LICENSE  PROJECT_STRUCTURE.md  README.md  mirrors.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml  lint.yml  release.yml  security.yml  test.yml
scripts/: build_linux.sh  build_windows.bat  cleanup.py
src/: __init__.py  main.py
src/autostart/: __init__.py  autostart_linux.py  autostart_windows.py
src/core/: cleaner_base.py  cleaner_linux.py  cleaner_windows.py  detector.py  mirror_manager.py
src/gui/: main_window.py  mirror_dialog.py  tray_icon.py
src/utils/: config.py  logger.py  platform_utils.py  subprocess_utils.py
