[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clash-env-cleaner"
version = "1.0.0"
description = "Clean Clash proxy environment settings / 清理 Clash 代理环境设置"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "ClashEnvCleaner"}
]
keywords = ["clash", "proxy", "cleaner", "environment"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

dependencies = [
    "PyQt6>=6.5.0",
    "pywin32>=306;platform_system=='Windows'",
]

[project.scripts]
clash-env-cleaner = "src.main:main"

[project.gui-scripts]
clash-env-cleaner-gui = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pyinstaller]
name = "ClashEnvCleaner"
onefile = true
windowed = true

[tool.black]
line-length = 88
skip-string-normalization = true

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",  # whitespace before ':' - not compliant with Black
    "W503",  # line break before binary operator
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

